# article-hub-api-django

./: .env.example  .flake8  .gitignore  pyproject.toml
.github/workflows/: deploy.yml  lint.yml
apps/articles/: filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/articles/migrations/: 0001_initial.py  0002_article_analysis.py
apps/auth/: apps.py
apps/health/: urls.py  views.py
apps/users/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py
common/: tasks.py
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
requirements/: requirements-dev.txt  requirements-prod.txt
